<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="@color/dark_slate_grey"
        android:text="@string/add_exercise_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/exercise_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/ex_name"
        android:inputType="text"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/sets_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/sets"
        android:inputType="number"
        android:textColorHint="#FFFFFF"
        android:visibility="visible" />
    <EditText
        android:id="@+id/reps_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/reps"
        android:inputType="number"
        android:textColorHint="#FFFFFF"
        android:visibility="visible" />

    <EditText
        android:id="@+id/weights_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="number"
        android:textColorHint="#FFFFFF"
        android:visibility="visible" />
</LinearLayout>