<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.workouttrackerapplication.ui.home.HomeFragment"

        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_navigation_home_to_navigation_history"
            app:destination="@id/navigation_history" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_workouts"
            app:destination="@id/navigation_workouts" />
        <action
            android:id="@+id/action_navigation_home_to_userLoginFragment"
            app:destination="@id/userLoginFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.workouttrackerapplication.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" >

    </fragment>

    <fragment
        android:id="@+id/navigation_workouts"
        android:name="com.example.workouttrackerapplication.ui.workouts.WorkoutsFragment"
        android:label="@string/title_workouts"
        tools:layout="@layout/fragment_workouts" >

        <action
            android:id="@+id/action_navigation_workouts_to_create_workout"
            app:destination="@id/navigation_create_workout"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popUpTo="@id/navigation_create_workout"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create_workout"
        android:name="com.example.workouttrackerapplication.ui.create_workout.CreateWorkoutFragment"
        android:label="@string/title_create_workout"
        tools:layout="@layout/fragment_create_workout"/>
    <fragment
        android:id="@+id/userLoginFragment"
        android:name="com.example.workouttrackerapplication.ui.user.UserLoginFragment"
        android:label="UserLoginFragment" />


</navigation>