<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="67dp"
        android:backgroundTint="@color/pink"
        android:text="@string/remove_profile_data"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/greeting_text_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_slate_grey"
                android:ems="10"
                android:padding="16dp"
                android:text="@string/homepage_greeting"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/editTextText2"
        android:layout_width="319dp"
        android:layout_height="54dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:text="@string/workouts_completed"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        android:id="@+id/home_material_calendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="100dp"
        android:background="@color/dark_slate_grey"
        android:backgroundTint="@color/dark_slate_grey"
        app:layout_constraintBottom_toTopOf="@+id/editTextText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:mcv_arrowColor="@color/light_slate_grey"
        app:mcv_dateTextAppearance="@style/TextAppearance.AppCompat.Body1"
        app:mcv_firstDayOfWeek="monday"
        app:mcv_headerTextAppearance="@style/TextAppearance.AppCompat.Body2"
        app:mcv_selectionColor="@color/charcoal"
        app:mcv_weekDayTextAppearance="@style/TextAppearance.AppCompat.Body1"
        xsi:schemaLocation="http://schemas.android.com/apk/res-auto " />

</androidx.constraintlayout.widget.ConstraintLayout>